--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ confection==0.1.5
 cryptography==45.0.4
 cymem==2.0.11
 dataclasses-json==0.6.7
+dill==0.4.0
 distro==1.9.0
 durationpy==0.10
 emoji==2.14.1
@@ -35,10 +36,12 @@ flatbuffers==25.2.10
 fr_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl#sha256=7d6ad14cd5078e53147bfbf70fb9d433c6a3865b695fda2657140bbc59a27e29
 frozenlist==1.7.0
 fsspec==2025.5.1
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.1
 google-auth==2.40.3
 googleapis-common-protos==1.70.0
-greenlet==3.2.3
 grpcio==1.73.0
+grpcio-status==1.71.0
 h11==0.16.0
 hf-xet==1.1.3
 html5lib==1.1
@@ -53,15 +56,17 @@ importlib_metadata==8.7.0
 importlib_resources==6.5.2
 Jinja2==3.1.6
 joblib==1.5.1
-jq==1.8.0
+jq==1.9.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 kubernetes==33.1.0
 langchain==0.3.25
+langchain-chroma==0.2.4
 langchain-community==0.3.25
 langchain-core==0.3.65
+langchain-google-genai==2.1.5
 langchain-text-splitters==0.3.8
 langcodes==3.5.0
 langdetect==1.0.9
@@ -80,9 +85,9 @@ multidict==6.4.4
 murmurhash==1.0.13
 mypy_extensions==1.1.0
 nest-asyncio==1.6.0
-networkx==3.5
+nlp==0.4.0
 nltk==3.9.1
-numpy==1.26.4
+numpy==2.3.0
 oauthlib==3.2.2
 olefile==0.47
 onnxruntime==1.22.0
@@ -99,12 +104,15 @@ opentelemetry-util-http==0.55b1
 orjson==3.10.18
 overrides==7.7.0
 packaging==24.2
-pillow==11.2.1
+pandas==2.3.0
+pathlib2==2.3.7.post1
 posthog==4.10.0
 preshed==3.0.10
 propcache==0.3.2
-protobuf==5.29.5
+proto-plus==1.26.1
+protobuf==5.27.4
 psutil==7.0.0
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
@@ -120,6 +128,7 @@ python-dotenv==1.1.0
 python-iso639==2025.2.18
 python-magic==0.4.27
 python-oxmsg==0.0.2
+pytz==2025.2
 PyYAML==6.0.2
 RapidFuzz==3.13.0
 referencing==0.36.2
@@ -130,10 +139,6 @@ requests-toolbelt==1.0.0
 rich==14.0.0
 rpds-py==0.25.1
 rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.7.0
-scipy==1.15.3
-sentence-transformers==4.1.0
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
@@ -149,15 +154,13 @@ starlette==0.45.3
 sympy==1.14.0
 tenacity==9.1.2
 thinc==8.3.6
-threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.2.2
 tqdm==4.67.1
-transformers==4.52.4
 typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+tzdata==2025.2
 unstructured==0.17.2
 unstructured-client==0.36.0
 urllib3==2.4.0
@@ -170,6 +173,7 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
+xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.23.0
