--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: sh -c "python chatbot_rag/embedding.py && python chatbot_rag/answer.py"
+    command: python chatbot_rag/answer.py
     env_file:
       - .env
     restart: "no"
